--- a/output/My-first-post.html
+++ b/output/My-first-post.html
@@ -39,9 +39,11 @@
             <div class="container">
                 <div class="header-nav">
                     <div class="header-logo">
-                        <a class="pull-left" href="/"><img class="mr20" src="/logo.svg" alt="logo">Blog de Mikael</a>
+                        <a class="pull-left" href="/"><img class="mr20" src="/image/logo.png" alt="logo">Blog de Mikael</a>
                     </div>
                     <div class="nav pull-right">
+                                <a href="/">Homepage</a>
+                                <a href="/categories.html">Categories</a>
                     </div>
                 </div>
             </div>
@@ -54,7 +56,7 @@
               <div class="col-lg-12">
                   <div class="header-content">
                       <h1 class="header-title">My first post</h1>
-                      <p class="header-date"> <a href="/author/your-name.html">Your name</a>, dim. 26 novembre 2017,  lun. 27 novembre 2017,  <a href="/category/misc.html">Misc</a></p>
+                      <p class="header-date">By <a href="/author/your-name.html">Your name</a>, dim. 26 novembre 2017, modified lun. 27 novembre 2017, in category <a href="/category/misc.html">Misc</a></p>
                       <div class="header-underline"></div>
                       <div class="clearfix"></div>
                       <p class="pull-right header-tags">
@@ -86,8 +88,11 @@
             <div class="container footer-container ">
                 <div class="row">
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
-                        <div class="footer-title"></div>
+                        <div class="footer-title">Sitemap</div>
                         <ul class="list-unstyled">
+                            <li><a href="/archives.html">Archives</a></li>
+                            <li><a href="/tags.html">Tags</a></li>
+                            <li><a href="/authors.html">Authors</a></li>
                         </ul>
                     </div>
                     <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
@@ -98,7 +103,7 @@
                         <p class="pull-right text-right">
                             <small><em>Proudly powered by <a href="http://docs.getpelican.com/" target="_blank">pelican</a></em></small><br/>
                             <small><em>Theme and code by <a href="https://github.com/molivier" target="_blank">molivier</a></em></small><br/>
-                            <small></small>
+                            <small>&copy; blogname 2015</small>
                         </p>
                     </div>
                 </div>
